--- a/src/components/Layout/Header.less
+++ b/src/components/Layout/Header.less
@@ -1,3 +1,16 @@
-.header {
-  max-width: 960px;
+.header-cover {
+  width: 100%;
+  box-shadow: 0 1px 5px rgba(0,0,0,.1);
+  .header {
+    max-width: 960px;
+    height: 70px;
+    line-height: 70px;
+    margin: 0 auto;
+  }
+  .nav {
+    .list {
+      display: inline-block;
+      padding: 0 15px;
+    }
+  }
 }
