--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,16 @@
-body {
+body, ul {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+li, i, em {
+  list-style: none;
+}
+a {
+  color: #333;
+  text-decoration: none;
+}
+a:active, a:hover, a:visited, a:link {
+  text-decoration: none;
 }
 @import '~antd/dist/antd.css';
