--- a/src/components/Layout/Header.less
+++ b/src/components/Layout/Header.less
@@ -1,13 +1,24 @@
 .header-cover {
   width: 100%;
-  box-shadow: 0 1px 5px rgba(0,0,0,.1);
+  max-width: 960px;
+  margin: 0 auto;
   .header {
-    max-width: 960px;
-    height: 70px;
-    line-height: 70px;
+    height: 80px;
+    line-height: 80px;
     margin: 0 auto;
+    .icon {
+      font-size: 20px;
+    }
+    .logo {
+      font-family: 'Shadows Into Light', serif;
+      font-size: 30px;
+    }
   }
   .nav {
+    width: 100%;
+    .nav-list {
+      width: 100%;
+    }
     .list {
       display: inline-block;
       padding: 0 15px;
