--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -1,8 +1,10 @@
+@maxWidth: 960px;
 .header-cover {
-  width: 100%;
-  max-width: 960px;
+  max-width: @maxWidth;
   margin: 0 auto;
+  padding: 0 15px;
   .header {
+    width: 100%;
     height: 80px;
     line-height: 80px;
     margin: 0 auto;
@@ -11,11 +13,12 @@
     }
     .logo {
       font-family: 'Shadows Into Light', serif;
-      font-size: 30px;
+      font-size: 35px;
     }
   }
   .nav {
     width: 100%;
+    padding: 50px 0;
     .nav-list {
       width: 100%;
     }
@@ -24,7 +27,14 @@
       padding: 0 15px;
     }
     .active {
-      color: #007fff;
+      color: #1184f8;
+      border-bottom: 1px solid #1184f8;      
     }
   }
+}
+.main {
+  width: 100%;
+  max-width: @maxWidth;
+  margin: 0 auto;
+  padding: 0 15px;
 }
