--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -3,6 +3,9 @@ body, ul {
   padding: 0;
   font-family: sans-serif;
 }
+html, body, #root {
+  width: 100%;
+}
 li, i, em {
   list-style: none;
   font-style: normal;
