--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -38,3 +38,13 @@
   margin: 0 auto;
   padding: 0 15px;
 }
+.back-top-inner {
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  border-radius: 4px;
+  background-color: #1088e9;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+}
