--- a/src/styles/archive-item.less
+++ b/src/styles/archive-item.less
@@ -39,3 +39,20 @@
     }
   }
 }
+.classify-cover { 
+  .common-title {
+    font-size: 14px;
+    position: relative;
+    margin: 10px auto;
+    padding: 0 30px;
+    color: #5f5f5f;
+    &::before {
+      position: absolute;
+      top: 0;
+      left: -15px;
+      padding: 0 30px;
+      content: "#";
+      color: #6fa3ef;
+    }
+  }
+}
