--- a/src/styles/archive-item.less
+++ b/src/styles/archive-item.less
@@ -4,7 +4,7 @@
   }
   .item {
     display: inline-block;
-    width: 33.33%;
+    // width: 33.33%;
     padding: 15px;
     margin: 0;
     vertical-align: middle;
