--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -10,10 +10,13 @@
     margin: 0 auto;
     .icon {
       font-size: 20px;
+      color: #333;
+      padding-right: 5px;
     }
     .logo {
       font-family: 'Shadows Into Light', serif;
       font-size: 35px;
+      color: #333;
     }
   }
   .nav {
@@ -26,9 +29,13 @@
       display: inline-block;
       padding: 0 15px;
     }
-    .active {
-      color: #1184f8;
-      border-bottom: 1px solid #1184f8;      
+    a {
+      color: #333;
+      text-decoration: none;
+      &.active {
+        color: #1184f8;
+        border-bottom: 1px solid #1184f8;      
+      }
     }
   }
 }
